k8s/infrastructure/base/configs/pipelines-as-code/controller-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pipelines-as-code-controller
  namespace: pipelines-as-code
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: homelab-gateway
      namespace: envoy-gateway-system
  hostnames:
    - tekton.mateuszledwon.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: pipelines-as-code-controller
          port: 8080
          weight: 1
